GNU parted NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug Fixes

  libparted: Don't fail to manipulate partitions on dmraid disks that
  have other partitions in use.

  libparted: mac: a MAC partition table could have a block_size larger
  than the one the kernel told us about.  Upon reading that partition
  table, libparted would ask if it's ok to use the larger block size.
  If you were to respond in the affirmative, libparted would read the
  larger number of bytes into a buffer of the shorter length,
  overrunning it.

  libparted: gpt: fix gpt_get_max_supported_partition_count to work
  also on little-endian systems.

  libparted: treat a disk with no pMBR as an msdos-labeled disk
  even when it has valid GPT headers.

  partprobe now tells the kernel to forget about any partitions
  on a device that has no recognizable partition table.

  dos: the range of random MBR signature values was artificially limited
  to 0..999999, which mistakenly included 0.  Now, we use the full 32-bit
  range, but exclude 0.

** Changes in behavior

  parted -l no longer lists device-mapper devices other than
  dmraid whole disks.

  Added new Linux-specific partition GUID type code
  (0FC63DAF-8483-4772-8E79-3D69D8477DE4) for Linux filesystem data on GPT
  disks.  This type code is now assigned as the default partition type code
  for new partitions holding Linux filesystems.

  Added new "msftdata" flag to identify partitions holding NTFS or FAT
  filesystems on GPT disks.  This flag corresponds to a GPT type code of
  EBD0A0A2-B9E5-4433-87C0-68B6B72699C7 ("Microsoft Basic Data").  Since
  Linux filesystem partitions formerly used this type code, this flag may
  optionally be set on Linux partitions to make the partition table type
  codes match former configurations in case the new Linux filesystem type
  code causes problems with some utility.  Note that this flag cannot be